--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,4 +4,7 @@ steps:
     args: ["assemble"]
   - name: gcr.io/cloud-builders/docker
     args: ['build', '-t', 'gcr.io/hackathon-practice-334716/gcp-springboot-example', '--build-arg=JAR_FILE=build/libs/gcp-springboot-example-0.0.1-SNAPSHOT.jar', '.']
+  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+    entrypoint: gcloud
+    args: ['run', 'deploy', 'gcp-springboot-example', '--image', 'gcr.io/hackathon-practice-334716/gcp-springboot-example:latest', '--region', 'europe-west1']
 images: ['gcr.io/hackathon-practice-334716/gcp-springboot-example']
