--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,7 +4,9 @@ steps:
     args: ["assemble"]
   - name: gcr.io/cloud-builders/docker
     args: ['build', '-t', 'gcr.io/hackathon-practice-334716/gcp-springboot-example', '--build-arg=JAR_FILE=build/libs/gcp-springboot-example-0.0.1-SNAPSHOT.jar', '.']
+    id: 'docker-build'
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: gcloud
     args: ['run', 'deploy', 'gcp-springboot-example', '--image', 'gcr.io/hackathon-practice-334716/gcp-springboot-example', '--region', 'europe-west1']
+    waitFor: ["docker-build"]
 images: ['gcr.io/hackathon-practice-334716/gcp-springboot-example']
