--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,12 +1,16 @@
 steps:
+  # Build jar
   - name: gradle:7.3.1-jdk17
     entrypoint: gradle
     args: ["assemble"]
+  # Build container image
   - name: gcr.io/cloud-builders/docker
     args: ['build', '-t', 'gcr.io/hackathon-practice-334716/gcp-springboot-example', '--build-arg=JAR_FILE=build/libs/gcp-springboot-example-0.0.1-SNAPSHOT.jar', '.']
-    id: 'docker-build'
+  # Push the container image to Container Registry
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['push', 'gcr.io/hackathon-practice-334716/gcp-springboot-example']
+  # Deploy container image to Cloud Run
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: gcloud
     args: ['run', 'deploy', 'gcp-springboot-example', '--image', 'gcr.io/hackathon-practice-334716/gcp-springboot-example', '--region', 'europe-west1']
-    waitFor: ["docker-build"]
 images: ['gcr.io/hackathon-practice-334716/gcp-springboot-example']
